--- a/bookme_project/bookme/templates/bookme/base.html
+++ b/bookme_project/bookme/templates/bookme/base.html
@@ -44,9 +44,9 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="active"><a href="{% url 'bookme:home' %}">Home</a></li>
+                    <li><a href="{% url 'bookme:bookingtype_list' %}">Prenotazioni</a></li>
+{#                    <li><a href="#contact">Contact</a></li>#}
                 </ul>
             </div>
             <!--/.nav-collapse -->
