--- a/bookme_project/bookme/templates/bookme/home.html
+++ b/bookme_project/bookme/templates/bookme/home.html
@@ -7,7 +7,7 @@
 
         <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
 
-        <p><a href="#" class="btn btn-primary btn-large">Fissa il tuo appuntamento &raquo;</a>
+        <p><a href="{% url 'bookme:bookingtype_list' %}" class="btn btn-primary btn-large">Fissa il tuo appuntamento &raquo;</a>
         </p>
     </div>
 {% endblock %}
